[trino] Add metadata support for Fluss tables